--- a/index.html
+++ b/index.html
@@ -11,19 +11,19 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="styles.css" />
-    <title>Document</title>
+    <title>workers</title>
   </head>
   <body>
-      <header class="header-img">
-          <div class="container">
-        <div class="header-img-text">
-          <h1>Design comes to those who wait</h1>
-          <h3>Hello This is Onepage Multipurpose Template.</h3>
-          <a href="#">LEARN MORE</a>
-        </div>
-      </header>
+    <header class="header-img">
+      <div class="header-img-text">
+        <h1>Design comes to those who wait</h1>
+        <h3>Hello This is Onepage Multipurpose.</h3>
+        <a href="#">LEARN MORE</a>
+      </div>
+    </header>
+    <div class="container">
       <main>
-        <div class="mountain">
+        <section class="mountain">
           <img class="mountain-img" src="./images/Mountain.svg" alt="" />
           <p>
             Donec rutrum congue leo eget malesuada. Curabitur non nulla sit amet
@@ -31,10 +31,14 @@
             Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a.
             Curabitur non nulla sit amet nisl tempus.
           </p>
-        </div>
-        <div class="services">
+        </section>
+        <section class="services">
           <div class="services-header">
-            <img class="services-img" src="./images/Composite Path-1.png" alt="service" />
+            <img
+              class="services-img"
+              src="./images/Composite Path-1.png"
+              alt="service"
+            />
             <h2>Our Services</h2>
             <p>
               Donec rutrum congue leo eget malesuada. Curabitur non nulla sit
@@ -43,124 +47,213 @@
             </p>
           </div>
           <div class="service-container-main">
-          <div class="service-container">
-            <div class="service-card">
-              <img class=".service-img" src="./images/Services01.png" alt="" />
-              <h3>Graphic Design</h3>
-              <p>
-                Donec rutrum congue leo eget malesuada. Curabitur non nulla sit
-                amet nisl tempus convallis quis ac lectus. Proin eget tortor
-                risus. Mauris blandit aliquet.
-              </p>
-            </div>
-            <div class="service-stats">
+            <div class="service-container">
+              <div class="service-card">
+                <img
+                  class=".service-img"
+                  src="./images/Services01.png"
+                  alt=""
+                />
+                <h3>Graphic Design</h3>
+                <p>
+                  Donec rutrum congue leo eget malesuada. Curabitur non nulla
+                  sit amet nisl tempus convallis quis ac lectus. Proin eget
+                  tortor risus. Mauris blandit aliquet.
+                </p>
+              </div>
+              <div class="service-stats">
                 <p>PS</p>
                 <div class="line-stats-outside">
-                    <div class="line-stats-inside line-3"></div>
+                  <div class="line-stats-inside line-3"></div>
                 </div>
                 <p>AI</p>
                 <div class="line-stats-outside">
-                    <div class="line-stats-inside line-2"></div>
+                  <div class="line-stats-inside line-2"></div>
                 </div>
                 <p>ID</p>
                 <div class="line-stats-outside">
-                    <div class="line-stats-inside line-1"></div>
+                  <div class="line-stats-inside line-1"></div>
                 </div>
+              </div>
             </div>
-          </div>
-          <div class="service-container">
-            <div class="service-card">
-              <img class="service-img" src="./images/Services03.png" alt="" />
-              <h3>Web Developement</h3>
-              <p>
-                Donec rutrum congue leo eget malesuada. Curabitur non nulla sit amet nisl tempus convallis quis ac lectus. Proin eget tortor risus. Mauris blandit aliquet.
-              </p>
-            </div>
-            <div class="service-stats">
+            <div class="service-container">
+              <div class="service-card">
+                <img class="service-img" src="./images/Services03.png" alt="" />
+                <h3>Web Developement</h3>
+                <p>
+                  Donec rutrum congue leo eget malesuada. Curabitur non nulla
+                  sit amet nisl tempus convallis quis ac lectus. Proin eget
+                  tortor risus. Mauris blandit aliquet.
+                </p>
+              </div>
+              <div class="service-stats">
                 <p>HTML</p>
                 <div class="line-stats-outside">
-                    <div class="line-stats-inside line-3"></div>
+                  <div class="line-stats-inside line-3"></div>
                 </div>
                 <p>CSS</p>
                 <div class="line-stats-outside">
-                    <div class="line-stats-inside line-2"></div>
+                  <div class="line-stats-inside line-2"></div>
                 </div>
                 <p>JS</p>
                 <div class="line-stats-outside">
-                    <div class="line-stats-inside line-1"></div>
+                  <div class="line-stats-inside line-1"></div>
                 </div>
+              </div>
             </div>
-          </div>
-          <div class="service-container">
-            <div class="service-card">
-              <img class="service-img" src="./images/Services02.png" alt="" />
-              <h3>WEb DESIGN</h3>
-              <p>
-                Donec rutrum congue leo eget malesuada. Curabitur non nulla sit
-                amet nisl tempus convallis quis ac lectus. Proin eget tortor
-                risus. Mauris blandit aliquet.
-              </p>
-            </div>
-            <div class="service-stats">
+            <div class="service-container">
+              <div class="service-card">
+                <img class="service-img" src="./images/Services02.png" alt="" />
+                <h3>WEb DESIGN</h3>
+                <p>
+                  Donec rutrum congue leo eget malesuada. Curabitur non nulla
+                  sit amet nisl tempus convallis quis ac lectus. Proin eget
+                  tortor risus. Mauris blandit aliquet.
+                </p>
+              </div>
+              <div class="service-stats">
                 <p>UI</p>
                 <div class="line-stats-outside">
-                    <div class="line-stats-inside line-1"></div>
+                  <div class="line-stats-inside line-1"></div>
                 </div>
                 <p>UX</p>
                 <div class="line-stats-outside">
-                    <div class="line-stats-inside line-2"></div>
+                  <div class="line-stats-inside line-2"></div>
                 </div>
                 <p>Responsive</p>
                 <div class="line-stats-outside">
-                    <div class="line-stats-inside line-3"></div>
+                  <div class="line-stats-inside line-3"></div>
                 </div>
+              </div>
             </div>
-        </div>
-        <div class="service-container">
-            <div class="service-card">
-              <img class="service-img img-smale" src="./images/Services04.png" alt="" />
-              <h3>APP Developement</h3>
-              <p>
-                Donec rutrum congue leo eget malesuada. Curabitur non nulla sit
-                amet nisl tempus convallis quis ac lectus. Proin eget tortor
-                risus. Mauris blandit aliquet.
-              </p>
-            </div>
-            <div class="service-stats">
+            <div class="service-container">
+              <div class="service-card">
+                <img
+                  class="service-img img-small"
+                  src="./images/Services04.png"
+                  alt=""
+                />
+                <h3>APP Developement</h3>
+                <p>
+                  Donec rutrum congue leo eget malesuada. Curabitur non nulla
+                  sit amet nisl tempus convallis quis ac lectus. Proin eget
+                  tortor risus. Mauris blandit aliquet.
+                </p>
+              </div>
+              <div class="service-stats">
                 <p>React</p>
                 <div class="line-stats-outside">
-                    <div class="line-stats-inside line-3"></div>
+                  <div class="line-stats-inside line-3"></div>
                 </div>
                 <p>Python</p>
                 <div class="line-stats-outside">
-                    <div class="line-stats-inside line-2"></div>
+                  <div class="line-stats-inside line-2"></div>
                 </div>
                 <p>Node</p>
                 <div class="line-stats-outside">
-                    <div class="line-stats-inside line-1"></div>
+                  <div class="line-stats-inside line-1"></div>
                 </div>
+              </div>
             </div>
+          </div>
+          <div class="records">
+            <div class="records-container">
+              <h4>694</h4>
+              <h4>completed Design</h4>
+            </div>
+            <div class="records-container">
+              <h4>324</h4>
+              <h4>page created</h4>
+            </div>
+            <div class="records-container">
+              <h4>134</h4>
+              <h4>pages codes</h4>
+            </div>
+            <div class="records-container">
+              <h4>27</h4>
+              <h4>apps finished</h4>
+            </div>
+          </div>
+        </section>
+        <section class="protfolio">
+          <div class="protfolio-header">
+            <img
+              class="protfolio-head-img"
+              src="./images/Composite Path-1.png"
+              alt="protfolio"
+            />
+            <h2>our portfolio</h2>
+            <p>
+              Donec rutrum congue leo eget malesuada. Curabitur non nulla sit
+              amet nisl tempus convallis quis ac lectus. Proin eget tortor
+              risus. Mauris blandit aliquet elit, eget tincidunt
+            </p>
+          </div>
+          <div class="protfolio-caregory-container">
+          <div class="protfolio-caregory">
+            <h3>Graphic</h3>
+            <h3>web</h3>
+          </div>
+          <img class="protfolio-caregory-img" src="./images/SP03.svg" alt="" />
+          <div class="protfolio-caregory">
+            <h3>Developement</h3>
+            <h3>app</h3>
+          </div>
         </div>
-    </div>
-           <div class="example">
-            <div class="example-container">
-                <p>694</p>
-                <p>completed Design</p>
-            </div>
-            <div class="example-container">
-                <p>324</p>
-                <p>page created</p>
-            </div>
-            <div class="example-container">
-                <p>134</p>
-                <p>pages codes</p>
-            </div>
-            <div class="example-container">
-                <p>27</p>
-                <p>apps finished</p>
-            </div>
-           </div> 
+          <div class="portfolio-images">
+            <img class="protfolio-img" src="images/Branding01.jpg" alt="" />
+            <img class="protfolio-img" src="images/Branding02.jpg" alt="" />
+            <img class="protfolio-img" src="images/Branding06.jpg" alt="" />
+            <img class="protfolio-img" src="images/Branding04.jpg" alt="" />
+            <img class="protfolio-img" src="images/Branding05.jpg" alt="" />
+          </div>
+          <a href="#">like what you see?</a>
+        </section>
+        <div class="view">
+          <img class="view-img" src="images/View.jpg" alt="" />
+          <a class="view-text" href="#">View our video</a>
         </div>
+        <section class="team">
+            <div class="team-header">
+            <img class="team-img" src="./images/Composite Path-1.png" alt="">
+          <h2>Our Team</h2>
+          <p>Donec rutrum congue leo eget malesuada. Curabitur non nulla sit amet nisl tempus convallis quis ac lectus. Proin eget tortor risus. Mauris blandit aliquet elit, eget tincidunt </p>
+        </div>
+          <div class="team-images">
+            <div class="team-card">
+              <div class="team-card-img">
+                <img src="./images/Team01.jpg" alt="" />
+                <h3>John Doe</h3>
+              </div>
+              <p>Donec rutrum congue leo eget malesuada. Curabitur non nulla sit amet nisl tempus convallis quis ac lectus. Proin eget tortor risus. 
+                Curabitur non nulla.</p>
+            </div>
+            <div class="team-card">
+              <div class="team-card-img">
+                <img src="./images/Team02.jpg" alt="" />
+                <h3>John Doe</h3>
+              </div>
+              <p>Donec rutrum congue leo eget malesuada. Curabitur non nulla sit amet nisl tempus convallis quis ac lectus. Proin eget tortor risus. 
+                Curabitur non nulla.</p>
+            </div>
+            <div class="team-card">
+              <div class="team-card-img">
+                <img src="./images/Team03.jpg" alt="" />
+                <h3>John Doe</h3>
+              </div>
+              <p>Donec rutrum congue leo eget malesuada. Curabitur non nulla sit amet nisl tempus convallis quis ac lectus. Proin eget tortor risus. 
+                Curabitur non nulla.</p>
+            </div>
+            <div class="team-card">
+              <div class="team-card-img">
+                <img src="./images/Team04.jpg" alt="" />
+                <h3>John Doe</h3>
+              </div>
+              <p>Donec rutrum congue leo eget malesuada. Curabitur non nulla sit amet nisl tempus convallis quis ac lectus. Proin eget tortor risus. 
+                Curabitur non nulla.</p>
+            </div>
+          </div>
+        </section>
       </main>
     </div>
   </body>
