bug fixed style

--- a/index.html
+++ b/index.html
@@ -189,13 +189,13 @@
               risus. Mauris blandit aliquet elit, eget tincidunt
             </p>
           </div>
-          <div class="protfolio-caregory-container">
-          <div class="protfolio-caregory">
+          <div class="protfolio-category-container">
+          <div class="protfolio-category">
             <h3>Graphic</h3>
             <h3>web</h3>
           </div>
-          <img class="protfolio-caregory-img" src="./images/SP03.svg" alt="" />
-          <div class="protfolio-caregory">
+              <img class="protfolio-category-img" src="./images/SP03.svg" alt="">
+          <div class="protfolio-category">
             <h3>Developement</h3>
             <h3>app</h3>
           </div>
