--- a/index.html
+++ b/index.html
@@ -254,6 +254,19 @@
             </div>
           </div>
         </section>
+        <section class="top-footer">
+            <div class="colomn-1">
+                <p class="black-p">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                    Senectus et netus et malesuada fames ac. Sem et tortor consequat id porta. Faucibus a pellentesque sit amet. Mollis nunc sed id semper risus in hendrerit gravida. Vulputate sapien nec sagittis aliquam malesuada bibendum arcu.
+                </p>
+                <p>Donec rutrum congue leo eget malesuada. Curabitur non nulla sit amet nisl tempus convallis quis ac lectus. Proin eget tortor risus. Mauris blandit aliquet elit, eget tincidunt </p>
+            </div>
+            <div class="colomn-2">
+                <div class="yellow-bar"> 
+                <p>Donec rutrum congue leo eget malesuada. Curabitur non nulla sit amet nisl tempus convallis quis ac lectus. Proin eget tortor risus. Mauris blandit aliquet elit, eget tincidunt </p>
+                <img src="./images/IMAGE-5.jpg" alt="">
+            </div>
+        </section>
       </main>
     </div>
   </body>
